--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <body>
           <a-scene>
             <a-assets>
-              <img id="Kermit" src="Kermit.jpg">
+              <img id="spookyJas" src="spookyJas.png">
               <a-asset-item id="Saloon-obj" src="Saloon.obj"></a-asset-item>
               <a-asset-item id="Saloon-mtl" src-"Saloon.mtl"></a-asset-item>
               <video id="LCD" autoplay loop="true" src="LCD.mp4">
@@ -30,7 +30,7 @@
                 animation__yoyo="property: position; dir: alternate; dur: 1000;
                                  easing: easeInSine; loop: true; to: 0 2 0">
               </a-sphere>
-              <a-box src="#Kermit" position="-1 0.5 1" width="1" height="1" depth="1" color="#4CC3D9"
+              <a-box src="#spookyJas" position="-1 0.5 1" width="1" height="2" depth="1" color="#4CC3D9"
                   animation="property: color; dir: alternate; dur: 1000;
                              easing: easeInSine; loop: true; to: #5F5"
                   animation__scale="property: scale; dir: alternate; dur: 200;
