spookJas changed to .jpg

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <body>
           <a-scene>
             <a-assets>
-              <img id="spookyJas" src="spookyJas.png">
+              <img id="spookyJas" src="spookyJas.jpg">
               <!--<a-asset-item id="Saloon-obj" src="Saloon.obj"></a-asset-item>
               <a-asset-item id="Saloon-mtl" src-"Saloon.mtl"></a-asset-item>-
               <video id="LCD" autoplay loop="true" src="LCD.mp4">-->
