--- a/index.html
+++ b/index.html
@@ -30,8 +30,10 @@
                 animation__yoyo="property: position; dir: alternate; dur: 1000;
                                  easing: easeInSine; loop: true; to: 0 2 0">
               </a-sphere>
-              <a-box src="#spookyJas" position="-1 0.5 1" width="1" height="1" depth="1" color="#4CC3D9"
-              </a-box>
+              <!--<a-box src="#spookyJas" position="-1 0.5 1" width="1" height="1" depth="1" color="#4CC3D9"
+              </a-box>-->
+              <a-image src="#spookyJas"> </a-image>
+
             <a-cylinder position="1 0.75 1" radius="0.5" height="1.5" color="#FFC65D"></a-cylinder>
             <a-plane wireframe="true" width="4" height="4" rotation="-90 0 0"></a-plane>
             <a-sky color="#030303"></a-sky>
