--- a/index.html
+++ b/index.html
@@ -21,14 +21,7 @@
                          easing: easeInSine; loop: true; to: 1.2 1 1.2"
             ></a-videosphere>
             <a-obj-model src="#Saloon-obj" src="#Saloon-mtl"></a-obj-model>-->
-              <a-sphere  wireframe="true" position="0 1.25 -1" radius="1.25" color="#EF2D5E"
-
-                animation="property: color; dir: alternate; dur: 1000;
-                           easing: easeInSine; loop: true; to: #5F5"
-                animation__scale="property: scale; dir: alternate; dur: 200;
-                           easing: easeInSine; loop: true; to: 1.2 1 1.2"
-                animation__yoyo="property: position; dir: alternate; dur: 1000;
-                                 easing: easeInSine; loop: true; to: 0 1 0">
+              <a-sphere  wireframe="true" position="0 0 0" radius="100" color="#EF2D5E">
               </a-sphere>
               <!--<a-box src="#spookyJas" position="-1 0.5 1" width="1" height="1" depth="1" color="#4CC3D9"
               </a-box>-->
