raycast added again

--- a/index.html
+++ b/index.html
@@ -13,8 +13,10 @@
               <a-asset-item id="Saloon-mtl" src-"Saloon.mtl"></a-asset-item>-
               <video id="LCD" autoplay loop="true" src="LCD.mp4">-->
             </a-assets>
+            <a-entity raycaster="objects: .collidable" showline="true">
+            </a-entity>
             <a-entity position="0 0 3.8">
-              <a-camera raycaster="objects: .collidable" showline="true"></a-camera>
+              <a-camera></a-camera>
             </a-entity>
           <!--<a-videosphere src="#LCD" position="0 0 0" radius="1000"
               animation__scale="property: scale; dir: alternate; dur: 1000;
