--- a/index.html
+++ b/index.html
@@ -9,30 +9,21 @@
           <a-scene>
             <a-assets>
               <img id="spookyJas" src="spookyJas.jpg">
+              <img id="sky" src="sky.jpg">
+
+
               <!--<a-asset-item id="Saloon-obj" src="Saloon.obj"></a-asset-item>
               <a-asset-item id="Saloon-mtl" src-"Saloon.mtl"></a-asset-item>-
               <video id="LCD" autoplay loop="true" src="LCD.mp4">-->
-            </a-assets>
-            <a-entity raycaster="objects: .collidable" showline="true">
-            </a-entity>
             <a-entity position="0 0 3.8">
               <a-camera></a-camera>
             </a-entity>
-          <!--<a-videosphere src="#LCD" position="0 0 0" radius="1000"
-              animation__scale="property: scale; dir: alternate; dur: 1000;
-                         easing: easeInSine; loop: true; to: 1.2 1 1.2"
-            ></a-videosphere>
+          <!--<a-videosphere src="#LCD" position="0 0 0" radius="1000"></a-videosphere>
             <a-obj-model src="#Saloon-obj" src="#Saloon-mtl"></a-obj-model>-->
-              </a-sphere>
               <!--<a-box src="#spookyJas" position="-1 0.5 1" width="1" height="1" depth="1" color="#4CC3D9"
               </a-box>-->
               <a-image src="#spookyJas" position="0 0 0" width="1" height="1"> </a-image>
-
-            <a-cylinder wireframe="true" position="1 0.75 1" radius="0.5" height="1.5" color="#FFC65D"></a-cylinder>
-            <!--<a-plane wireframe="true" width="4" height="4" rotation="-90 0 0"></a-plane>-->
-            <a-sky color="#030303" wireframe="true"
-              animation="property: color; dir: alternate; dur: 1000;
-                         easing: easeInSine; loop: true; to: #5F5">
+            <a-sky src="#sky">
             </a-sky>
           </a-scene>
     </body>
