fixed asset loading

--- a/index.html
+++ b/index.html
@@ -10,19 +10,12 @@
             <a-assets>
               <img id="spookyJas" src="spookyJas.jpg">
               <img id="sky" src="sky.jpg">
-
-
-              <!--<a-asset-item id="Saloon-obj" src="Saloon.obj"></a-asset-item>
-              <a-asset-item id="Saloon-mtl" src-"Saloon.mtl"></a-asset-item>-
-              <video id="LCD" autoplay loop="true" src="LCD.mp4">-->
+            </a-assets>
             <a-entity position="0 0 3.8">
               <a-camera></a-camera>
             </a-entity>
-          <!--<a-videosphere src="#LCD" position="0 0 0" radius="1000"></a-videosphere>
-            <a-obj-model src="#Saloon-obj" src="#Saloon-mtl"></a-obj-model>-->
-              <!--<a-box src="#spookyJas" position="-1 0.5 1" width="1" height="1" depth="1" color="#4CC3D9"
-              </a-box>-->
-              <a-image src="#spookyJas" position="0 0 0" width="1" height="1"> </a-image>
+              <a-image src="#spookyJas" position="0 0 0" width="1" height="1">
+              </a-image>
             <a-sky src="#sky">
             </a-sky>
           </a-scene>
