--- a/index.html
+++ b/index.html
@@ -7,17 +7,18 @@
     </head>
     <body>
           <a-scene>
-            <a-assets>
-              <img id="spookyJas" src="spookyJas.jpg">
-              <img id="sky" src="sky.jpg">
-            </a-assets>
-            <a-entity position="0 0 3.8">
-              <a-camera></a-camera>
-            </a-entity>
-              <a-image src="#spookyJas" position="0 0 0" width="1" height="1">
-              </a-image>
-            <a-sky src="#sky">
-            </a-sky>
+              <a-assets>
+                <img id="spookyJas" src="spookyJas.jpg">
+                <img id="sky" src="sky.jpg">
+              </a-assets>
+                <a-entity position="0 0 3.8">
+                  <a-camera></a-camera>
+                </a-entity>
+                  <a-image src="#spookyJas" position="0 0 0" width="1" height="1">
+                  </a-image>
+              <a-plane src="#spookyJas" height="100" width="100" rotation="-90 0 0"></a-plane>
+                <a-sky src="#sky">
+                </a-sky>
           </a-scene>
     </body>
 
