--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
   <html>
     <head>
-      <title>HelloVR_0.191</title>
+      <title>Spooktober</title>
       <script src="aframe-v0.7.1.js"></script>
       <script src="aframe-animation-component.js"></script>
     </head>
@@ -16,9 +16,9 @@
                 </a-entity>
                   <a-image src="#spookyJas" position="0 0 0" width="1" height="1">
                   </a-image>
-              <a-plane src="#spookyJas" width="100" rotation="-90 0 0"></a-plane>
-                <a-sky src="#sky">
-                </a-sky>
+              <a-plane height="100" width="100" rotation="-90 0 0"></a-plane>
+              <a-sky src="#sky">
+              </a-sky>
           </a-scene>
     </body>
 
