--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 </a-entity>
                   <a-image src="#spookyJas" position="0 0 0" width="1" height="1">
                   </a-image>
-              <a-plane height="100" width="100" rotation="-90 0 0"></a-plane>
+              <a-plane position="0 0 -100" height="500" width="500" rotation="-90 0 0"></a-plane>
               <a-sky src="#sky">
               </a-sky>
           </a-scene>
