*box, I ment box

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 </a-entity>
                   <a-image src="#spookyJas" position="0 0 0" width="1" height="1">
                   </a-image>
-                  <a-cube position="0 -50 0" height="100" width="10" color="#808080"></a-cube>
+                  <a-box position="0 -50 0" height="100" width="10" color="#808080"></a-box>
               <a-plane position="0 -100 0" height="100000" width="100000" rotation="-90 0 0"></a-plane>
               <a-sky src="#sky"></a-sky>
           </a-scene>
