--- a/index.html
+++ b/index.html
@@ -10,13 +10,14 @@
               <a-assets>
                 <img id="spookyJas" src="spookyJas.jpg">
                 <img id="sky" src="sky.jpg">
+                <img id="building" src="building.jpg">
               </a-assets>
                 <a-entity position="0 0 0">
                   <a-camera></a-camera>
                 </a-entity>
                   <a-image src="#spookyJas" position="0 0 0" width="1" height="1">
                   </a-image>
-                  <a-box position="0 -500 -40" height="1000" width="70" depth="70" color="#808080"></a-box>
+                  <a-box src="#building" position="0 -500 -40" height="1000" width="70" depth="70" color="#808080"></a-box>
               <a-plane position="0 -100 0" height="1000" width="1000" rotation="-90 0 0"></a-plane>
               <a-sky src="#sky"></a-sky>
           </a-scene>
