--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
                 </a-entity>
                   <a-image src="#spookyJas" position="0 0 0" width="1" height="1">
                   </a-image>
+                  <a-box position="0 0 -20" width="40" height="10" depth="5" colour="#3d2501"></a-box>
                   <a-box src="#building" repeat="10" position="0 -500 -40" height="1000" width="70" depth="70" color="#808080"></a-box>
               <a-plane position="0 -100 0" height="1000" width="1000" rotation="-90 0 0"></a-plane>
               <a-sky src="#sky"></a-sky>
