--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 </a-entity>
                   <a-image src="#spookyJas" position="0 0 0" width="1" height="1">
                   </a-image>
-                  <a-collada-model src="#skyscraper"></a-collada-model>
+                  <a-collada-model src="#skyscraper" position="0 -500 -40" rotation="-90 0 0"></a-collada-model>
                   <a-box position="0 0 -3.5" width="0.75" height="0.5" depth="5" colour="#664400"></a-box>
                   <a-box src="#building" repeat="10" position="0 -500 -40" height="1000" width="70" depth="70" color="#808080"></a-box>
               <a-plane position="0 -100 0" height="1000" width="1000" rotation="-90 0 0"></a-plane>
