--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
                 <img id="spookyJas" src="spookyJas.jpg">
                 <img id="sky" src="sky.jpg">
                 <img id="building" src="building.jpg">
+                <audio id="Weird" src="Weird.mp3"></audio>
+                <a-asset-item id="UFO" src="UFO.dae"></a-asset-item
+                <a-asset-item id="Castle" src="castle.dae"></a-asset-item>
                 <a-asset-item id="skyscraper" src="skyscraper.dae"></a-asset-item>
               </a-assets>
                 <a-entity position="0 0 0">
@@ -18,11 +21,13 @@
                 </a-entity>
                   <a-image src="#spookyJas" position="0 0 0" width="1" height="1">
                   </a-image>
+                  <a-collada-model src="#UFO" position="50 50 50" sound="#Weird"></a-collada-model>
+                  <a-collada-model src="#Castle" position="50 0 50"></a-collada-model>
                   <a-collada-model src="#skyscraper" position="0 -500 -40" rotation="-90 0 0"></a-collada-model>
-                  <a-box position="0 0 -3.5" width="0.75" height="0.5" depth="5" colour="#664400"></a-box>
-                  <!--<a-box src="#building" repeat="10" position="0 -500 -40" height="1000" width="70" depth="70" color="#808080"></a-box>-->
+                  <!--<a-box position="0 0 -3.5" width="0.75" height="0.5" depth="5" colour="#664400"></a-box>
+                <a-box src="#building" repeat="10" position="0 -500 -40" height="1000" width="70" depth="70" color="#808080"></a-box>-->
               <a-plane position="0 -100 0" height="1000" width="1000" rotation="-90 0 0"></a-plane>
-              <a-sky src="#sky"></a-sky>
+              <a-sky src="#sky" color="#000000"></a-sky>
           </a-scene>
     </body>
 
