--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
                 <img id="sky" src="sky.jpg">
                 <img id="building" src="building.jpg">
                 <audio id="Weird" src="Weird.mp3"></audio>
-                <a-asset-item id="UFO" src="UFO.dae"></a-asset-item
+                <a-asset-item id="UFO" src="UFO.dae"></a-asset-item>
                 <a-asset-item id="Castle" src="castle.dae"></a-asset-item>
                 <!--<a-asset-item id="skyscraper" src="skyscraper.dae"></a-asset-item>-->
               </a-assets>
