--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                 <audio id="Weird" src="Weird.mp3"></audio>
                 <a-asset-item id="UFO" src="UFO.dae"></a-asset-item>
                 <a-asset-item id="Castle" src="castle.dae"></a-asset-item>
-                <!--<a-asset-item id="skyscraper" src="skyscraper.dae"></a-asset-item>-->
+                <a-asset-item id="skyscraper" src="skyscraper.dae"></a-asset-item>
               </a-assets>
                 <a-entity position="0 0 0">
                   <a-camera></a-camera>
@@ -24,9 +24,9 @@
                   <a-collada-model src="#UFO" position="5 5 5" sound="#Weird"></a-collada-model>
                   <a-collada-model src="#Castle" position="10 0 10"></a-collada-model>
                   <a-collada-model src="#skyscraper" position="0 -500 -40" rotation="-90 0 0"></a-collada-model>
-                  <!--<a-box position="0 0 -3.5" width="0.75" height="0.5" depth="5" colour="#664400"></a-box>
-                <a-box src="#building" repeat="10" position="0 -500 -40" height="1000" width="70" depth="70" color="#808080"></a-box>-->
-                <a-sky src="#sky" color="#000000"></a-sky>
+                  <a-box position="0 0 -3.5" width="0.75" height="0.5" depth="5" colour="#664400"></a-box>
+                <a-box src="#building" repeat="10" position="0 -500 -40" height="1000" width="70" depth="70" color="#808080"></a-box>
+                <a-sky src="#sky"></a-sky>
           </a-scene>
     </body>
 
