akjf;laksdjf;la

--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
                   <a-collada-model src="#Castle" position="0 0 50"></a-collada-model>
                   <a-collada-model src="#skyscraper" position="0 -500 -40" rotation="-90 0 0"></a-collada-model>
                   <a-box position="0 0 -3.5" width="0.75" height="0.5" depth="9" sound="src: #Weird; autoplay: true; loop: true; maxDistance: 50" colour="#000000"></a-box>
-                  <a-box src="#building" repeat="3" position="0 -5000 -40" height="10000" width="70" depth="70" colour="#050505"></a-box>
-                  <a-plane position="0 -1000 0" colour="#404040" rotation="-90 0 0" height="5000" width="5000"></a-plane>
+                  <a-box src="#building" repeat="3" position="0 -5000 -40" height="10000" width="70" depth="70" color="#050505"></a-box>
+                  <a-plane position="0 -1000 0" colour="#404040" rotation="-90 0 0" height="50000" width="50000"></a-plane>
                 <a-sky src="#sky"></a-sky>
           </a-scene>
     </body>
