--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
                 </a-entity>
                   <a-image src="#spookyJas" position="0 0 0" width="1" height="1">
                   </a-image>
-                  <a-collada-model src="#UFO" position="0 20 50"></a-collada-model>
-                  <a-collada-model src="#Castle" position="0 0 50"></a-collada-model>
+                  <a-collada-model src="#UFO" colour="black" position="0 20 50"></a-collada-model>
+                  <a-collada-model src="#Castle" color="black" position="0 0 50"></a-collada-model>
                   <a-collada-model src="#skyscraper" position="0 -500 -40" rotation="-90 0 0"></a-collada-model>
                   <a-box color="#050505" position="0 0 -3.5" width="0.75" height="0.5" depth="9" sound="src: #Weird; autoplay: true; loop: true; maxDistance: 50"></a-box>
                   <a-box src="#building" repeat="3" position="0 -5000 -40" height="10000" width="70" depth="70"></a-box>
